--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fin",
+  "name": "cit-16",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,16 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "jquery": "^3.5.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "vue": "^2.6.12",
+    "vue-axios": "^3.2.4",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.1",
+    "@babel/eslint-parser": "^7.13.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^7.20.0",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-router": "^3.5.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
