--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "buefy": "^0.9.4",
     "core-js": "^3.6.5",
+    "emailjs-com": "^2.6.4",
     "jquery": "^3.5.1",
     "materialize-css": "^1.0.0-rc.2",
+    "nexmo": "^2.9.1",
+    "twilio": "^3.57.0",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
+    "vue-masked-input": "^0.5.2",
+    "vue-twilio": "^0.0.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -25,6 +32,8 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "eslint": "^7.20.0",
     "eslint-plugin-vue": "^6.2.2",
     "vue-router": "^3.5.1",
@@ -48,5 +57,9 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "main": "index.js",
+  "repository": "https://github.com/AlexZayash/fin.git",
+  "author": "AlexZ <a.zayash@kasko2go.com>",
+  "license": "MIT"
 }
